📱 fix height cropping issue

--- a/notifications-page-main/style.css
+++ b/notifications-page-main/style.css
@@ -8,13 +8,13 @@
   --blue: hsl(219, 85%, 26%);
 
   /* Neutral */
---white: hsl(0, 0%, 100%);
---very-light-grayish-blue: hsl(210, 60%, 98%);
---light-grayish-blue-1: hsl(211, 68%, 94%);
---light-grayish-blue-2: hsl(205, 33%, 90%);
---grayish-blue: hsl(219, 14%, 63%);
---dark-grayish-blue: hsl(219, 12%, 42%);
---very-dark-blue: hsl(224, 21%, 14%);
+  --white: hsl(0, 0%, 100%);
+  --very-light-grayish-blue: hsl(210, 60%, 98%);
+  --light-grayish-blue-1: hsl(211, 68%, 94%);
+  --light-grayish-blue-2: hsl(205, 33%, 90%);
+  --grayish-blue: hsl(219, 14%, 63%);
+  --dark-grayish-blue: hsl(219, 12%, 42%);
+  --very-dark-blue: hsl(224, 21%, 14%);
 }
 
 * {
@@ -23,9 +23,9 @@
   font-family: 'Plus Jakarta Sans', sans-serif;
 }
 
-html, body {
+body {
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
   color: var(--dark-grayish-blue);
 }
 
